Add Google OAuth2 login flow with JWT redirect